--- a/index.html
+++ b/index.html
@@ -16,23 +16,41 @@
 </body>
 
 <script>
-    dd.config({
-        agentId: '116242846', // 必填，微应用ID
-        corpId: 'dingb6a804608ad50c0d35c2f4657eb6378f', //必填，企业ID
-        timeStamp: +new Date(), // 必填，生成签名的时间戳
-        nonceStr: 'dhrsrwwwrbewbet343454ebtebtrb', // 必填，生成签名的随机串
-        signature: 'ertberterertertbertre ter', // 必填，签名
-        type: 0, //选填。0表示微应用的jsapi,1表示服务窗的jsapi。不填默认为0。该参数从dingtalk.js的0.8.3版本开始支持
-        jsApiList: ['runtime.info', 'biz.contact.choose',
-                'device.notification.confirm', 'device.notification.alert',
-                'device.notification.prompt', 'biz.ding.post',
-                'biz.util.openLink'
-            ] // 必填，需要使用的jsapi列表，注意：不要带dd。
-    });
+    window.onload = function() {
+        console.log(dd)
+        dd.config({
+            agentId: '116242846', // 必填，微应用ID
+            corpId: 'dingb6a804608ad50c0d35c2f4657eb6378f', //必填，企业ID
+            timeStamp: +new Date(), // 必填，生成签名的时间戳
+            nonceStr: 'dhrsrwwwrbewbet343454ebtebtrb', // 必填，生成签名的随机串
+            signature: 'ertberterertertbertre ter', // 必填，签名
+            type: 0, //选填。0表示微应用的jsapi,1表示服务窗的jsapi。不填默认为0。该参数从dingtalk.js的0.8.3版本开始支持
+            jsApiList: ['runtime.info', 'biz.contact.choose',
+                    'device.notification.confirm', 'device.notification.alert',
+                    'device.notification.prompt', 'biz.ding.post',
+                    'biz.util.openLink'
+                ] // 必填，需要使用的jsapi列表，注意：不要带dd。
+        });
 
-    dd.ready(() => {
-        console.log(234)
-    })
+        dd.ready(function() {
+            console.log('ready')
+        })
+
+        dd.error(function(error) {
+            /**
+                {
+                message:"错误信息",//message信息会展示出钉钉服务端生成签名使用的参数，请和您生成签名的参数作对比，找出错误的参数
+                errorCode:"错误码"
+                }
+            **/
+            console.log('dd error: ' + JSON.stringify(err));
+        });
+    }
+
+
+    // dd.ready(() => {
+    //     console.log(234)
+    // })
 </script>
 
 </html>
