--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         });
 
         dd.ready(function() {
-            console.log('ready')
+            alert('ready')
         })
 
         dd.error(function(error) {
@@ -43,7 +43,7 @@
                 errorCode:"错误码"
                 }
             **/
-            console.log('dd error: ' + JSON.stringify(err));
+            alert('dd error: ' + JSON.stringify(err));
         });
     }
 
