--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             agentId: '116242846', // 必填，微应用ID
             corpId: 'dingb6a804608ad50c0d35c2f4657eb6378f', //必填，企业ID
             timeStamp: +new Date(), // 必填，生成签名的时间戳
-            nonceStr: 'dhrsrwwwrbewbet343454ebtebtrb', // 必填，生成签名的随机串
-            signature: 'ertberterertertbertre ter', // 必填，签名
+            nonceStr: 'abcdefg', // 必填，生成签名的随机串
+            signature: '750d0719eeb810f6fa12b04d87d0d7789c4bc64f', // 必填，签名
             type: 0, //选填。0表示微应用的jsapi,1表示服务窗的jsapi。不填默认为0。该参数从dingtalk.js的0.8.3版本开始支持
             jsApiList: ['runtime.info', 'biz.contact.choose',
                     'device.notification.confirm', 'device.notification.alert',
