--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             });
         })
 
-        dd.error(function(error) {
+        DingTalkPC.error(function(error) {
             /**
                 {
                 message:"错误信息",//message信息会展示出钉钉服务端生成签名使用的参数，请和您生成签名的参数作对比，找出错误的参数
