--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             **/
             // alert('dd error: ' + JSON.stringify(err));
             DingTalkPC.device.notification.alert({
-                message: JSON.stringify(err),
+                message: JSON.stringify(error),
                 title: "提示", //可传空
                 buttonName: "收到",
                 onSuccess: function() {
