--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             timeStamp: '1501486582', // 必填，生成签名的时间戳
             nonceStr: 'abcdefg', // 必填，生成签名的随机串
             signature: 'fcab574d1a34cafebf7ee648098adacc9a5b0b6d', // 必填，签名
-            type: 0, //选填。0表示微应用的jsapi,1表示服务窗的jsapi。不填默认为0。该参数从dingtalk.js的0.8.3版本开始支持
+            // type: 0, //选填。0表示微应用的jsapi,1表示服务窗的jsapi。不填默认为0。该参数从dingtalk.js的0.8.3版本开始支持
             jsApiList: ['runtime.info', 'biz.contact.choose',
                     'device.notification.confirm', 'device.notification.alert',
                     'device.notification.prompt', 'biz.ding.post',
