--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             jsApiList: ['runtime.info', 'biz.contact.choose',
                     'device.notification.confirm', 'device.notification.alert',
                     'device.notification.prompt', 'biz.ding.post',
-                    'biz.util.openLink'
+                    'biz.util.openLink', 'biz.cspace.preview'
                 ] // 必填，需要使用的jsapi列表，注意：不要带dd。
         });
 
