--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
         });
 
         DingTalkPC.ready(function() {
-            document.getElementsByTagName('button').onclick = function() {
+            document.getElementsByTagName('button').onClick = function() {
                 DingTalkPC.biz.cspace.preview({
                     corpId: "dingb6a804608ad50c0d35c2f4657eb6378f",
                     fileName: "1分钟钉盘入门.pdf",
-                    fileSize: 1024,
                     fileType: "pdf",
                     onSuccess: function() {
                         //无，直接在弹窗页面显示文件详细信息
