--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         });
 
         DingTalkPC.ready(function() {
-            document.getElementsByTagName('button').onClick = function() {
+            document.getElementsByTagName('button').onclick = function() {
                 DingTalkPC.biz.cspace.preview({
                     corpId: "dingb6a804608ad50c0d35c2f4657eb6378f",
                     fileName: "1分钟钉盘入门.pdf",
