--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
         DingTalkPC.ready(function() {
             document.getElementsByTagName('button').onclick = function() {
+                console.log(111)
                 DingTalkPC.biz.cspace.preview({
                     corpId: "dingb6a804608ad50c0d35c2f4657eb6378f",
                     fileName: "1分钟钉盘入门.pdf",
