--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <p>测试</p>
-    <!-- <button id="vv">打开钉盘文件</button> -->
+    <button id="vv">获取用户信息</button>
 </body>
 
 <script>
@@ -48,26 +48,34 @@
         });
 
         DingTalkPC.ready(function() {
-            // document.getElementById('vv').onclick = function() {
-            //     console.log(111)
-            //     DingTalkPC.biz.cspace.preview({
-            //         corpId: "dingb6a804608ad50c0d35c2f4657eb6378f",
-            //         fileName: "1分钟钉盘入门.pdf",
-            //         spaceId: "13557022",
-            //         fileId: "11452819",
-            //         fileSize: 1024,
-            //         fileType: "pdf",
-            //         onSuccess: function() {
-            //             //无，直接在弹窗页面显示文件详细信息
-            //         },
-            //         onFail: function(err) {
-            //             /*{
-            //                 errorCode: 1001, //错误码
-            //                 errorMessage: '', //错误信息
-            //             }*/
-            //         }
-            //     });
-            // }
+            document.getElementById('vv').onclick = function() {
+                console.log(111)
+                DingTalkPC.biz.user.get({
+                    onSuccess: function(info) {
+                        logger.e('userGet success: ' + JSON.stringify(info));
+                    },
+                    onFail: function(err) {
+                        logger.e('userGet fail: ' + JSON.stringify(err));
+                    }
+                });
+                // DingTalkPC.biz.cspace.preview({
+                //     corpId: "dingb6a804608ad50c0d35c2f4657eb6378f",
+                //     fileName: "1分钟钉盘入门.pdf",
+                //     spaceId: "13557022",
+                //     fileId: "11452819",
+                //     fileSize: 1024,
+                //     fileType: "pdf",
+                //     onSuccess: function() {
+                //         //无，直接在弹窗页面显示文件详细信息
+                //     },
+                //     onFail: function(err) {
+                //         /*{
+                //             errorCode: 1001, //错误码
+                //             errorMessage: '', //错误信息
+                //         }*/
+                //     }
+                // });
+            }
 
 
             DingTalkPC.device.notification.prompt({
