--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     'biz.util.openLink', 'biz.cspace.preview', 'biz.user.get'
                 ] // 必填，需要使用的jsapi列表，注意：不要带dd。
         });
+        console.log(DingTalkPC)
 
         DingTalkPC.ready(function() {
             document.getElementById('vv').onclick = function() {
