--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             jsApiList: ['runtime.info', 'biz.contact.choose',
                     'device.notification.confirm', 'device.notification.alert',
                     'device.notification.prompt', 'biz.ding.post',
-                    'biz.util.openLink', 'biz.cspace.preview', 'biz.user.get'
+                    'biz.util.openLink', 'biz.cspace.preview', 'biz.user.get', 'biz.navigation.setLeft'
                 ] // 必填，需要使用的jsapi列表，注意：不要带dd。
         });
         console.log(DingTalkPC)
@@ -95,6 +95,21 @@
                 //     }
                 // });
             }
+
+
+            //设置返回按钮
+            dd.biz.navigation.setLeft({
+                show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
+                control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
+                showIcon: true, //是否显示icon，true 显示， false 不显示，默认true； 注：具体UI以客户端为准
+                text: '返回', //控制显示文本，空字符串表示显示默认文本
+                onSuccess: function(result) {
+                    //如果control为true，则onSuccess将在发生按钮点击事件被回调
+                    console.log('点击了返回按钮');
+                    window.history.back();
+                },
+                onFail: function(err) {}
+            });
 
 
             DingTalkPC.device.notification.prompt({
