--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
             //设置返回按钮
-            dd.biz.navigation.setLeft({
+            DingTalkPC.biz.navigation.setLeft({
                 show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
                 control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
                 showIcon: true, //是否显示icon，true 显示， false 不显示，默认true； 注：具体UI以客户端为准
