--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <script src="https://g.alicdn.com/dingding/dingtalk-pc-api/2.7.0/index.js"></script>
+    <!-- <script src="https://g.alicdn.com/dingding/dingtalk-pc-api/2.7.0/index.js"></script> -->
 
-    <!-- <script src="https://g.alicdn.com/dingding/open-develop/1.6.9/dingtalk.js"></script> -->
+    <script src="https://g.alicdn.com/dingding/open-develop/1.6.9/dingtalk.js"></script>
     <!-- <script src="./index.js"></script> -->
 </head>
 
@@ -20,8 +20,8 @@
 
 <script>
     window.onload = function() {
-        console.log(DingTalkPC)
-        DingTalkPC.runtime.permission.requestAuthCode({
+        console.log(dd)
+        dd.runtime.permission.requestAuthCode({
             corpId: "dingb6a804608ad50c0d35c2f4657eb6378f", //企业ID
             onSuccess: function(result) {
                 /*{
@@ -33,7 +33,7 @@
 
         })
 
-        DingTalkPC.config({
+        dd.config({
             agentId: '116242846', // 必填，微应用ID
             corpId: 'dingb6a804608ad50c0d35c2f4657eb6378f', //必填，企业ID
             timeStamp: '1501486582', // 必填，生成签名的时间戳
@@ -46,14 +46,14 @@
                     'biz.util.openLink', 'biz.cspace.preview', 'biz.user.get', 'biz.navigation.setLeft', 'biz.util.openSlidePanel'
                 ] // 必填，需要使用的jsapi列表，注意：不要带dd。
         });
-        console.log(DingTalkPC)
+        console.log(dd)
 
-        DingTalkPC.ready(function() {
+        dd.ready(function() {
             document.getElementById('vv').onclick = function() {
                 console.log(111)
-                DingTalkPC.biz.user.get({
+                dd.biz.user.get({
                     onSuccess: function(info) {
-                        DingTalkPC.device.notification.alert({
+                        dd.device.notification.alert({
                             message: JSON.stringify(info),
                             title: "userGet success:", //可传空
                             buttonName: "ok",
@@ -65,7 +65,7 @@
                         });
                     },
                     onFail: function(err) {
-                        DingTalkPC.device.notification.alert({
+                        dd.device.notification.alert({
                             message: JSON.stringify(err),
                             title: "userGet fail:", //可传空
                             buttonName: "ok",
@@ -77,7 +77,7 @@
                         });
                     }
                 });
-                // DingTalkPC.biz.cspace.preview({
+                // dd.biz.cspace.preview({
                 //     corpId: "dingb6a804608ad50c0d35c2f4657eb6378f",
                 //     fileName: "1分钟钉盘入门.pdf",
                 //     spaceId: "13557022",
@@ -96,37 +96,37 @@
                 // });
             }
 
-            DingTalkPC.biz.util.openSlidePanel({
-                url: 'about:blank', //打开侧边栏的url
-                title: 'title', //侧边栏顶部标题
-                onSuccess: function(result) {
-                    /*
-                        调用biz.navigation.quit接口进入onSuccess, result为调用biz.navigation.quit传入的数值
-                    */
-                    //设置返回按钮
-                    DingTalkPC.biz.navigation.setLeft({
-                        show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
-                        control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
-                        showIcon: true, //是否显示icon，true 显示， false 不显示，默认true； 注：具体UI以客户端为准
-                        text: '返回', //控制显示文本，空字符串表示显示默认文本
-                        onSuccess: function(result) {
-                            //如果control为true，则onSuccess将在发生按钮点击事件被回调
-                            console.log('点击了返回按钮');
-                            window.history.back();
-                        },
-                        onFail: function(err) {}
-                    });
-                },
-                onFail: function() {
-                    /*
-                        tips:点击右上角上角关闭按钮会进入onFail
-                    */
-                }
-            })
+            // dd.biz.util.openSlidePanel({
+            //     url: 'about:blank', //打开侧边栏的url
+            //     title: 'title', //侧边栏顶部标题
+            //     onSuccess: function(result) {
+            //         /*
+            //             调用biz.navigation.quit接口进入onSuccess, result为调用biz.navigation.quit传入的数值
+            //         */
+            //         //设置返回按钮
+            //         dd.biz.navigation.setLeft({
+            //             show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
+            //             control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
+            //             showIcon: true, //是否显示icon，true 显示， false 不显示，默认true； 注：具体UI以客户端为准
+            //             text: '返回', //控制显示文本，空字符串表示显示默认文本
+            //             onSuccess: function(result) {
+            //                 //如果control为true，则onSuccess将在发生按钮点击事件被回调
+            //                 console.log('点击了返回按钮');
+            //                 window.history.back();
+            //             },
+            //             onFail: function(err) {}
+            //         });
+            //     },
+            //     onFail: function() {
+            //         /*
+            //             tips:点击右上角上角关闭按钮会进入onFail
+            //         */
+            //     }
+            // })
 
 
 
-            DingTalkPC.device.notification.prompt({
+            dd.device.notification.prompt({
                 message: "写点什么？",
                 title: "提示",
                 buttonLabels: ['继续', '取消'],
@@ -138,7 +138,7 @@
                         value: '' //输入的值
                     }
                     */
-                    DingTalkPC.device.notification.alert({
+                    dd.device.notification.alert({
                         message: '你输入了' + result.value,
                         title: "提示", //可传空
                         buttonName: "ok",
@@ -153,7 +153,7 @@
             });
         })
 
-        DingTalkPC.error(function(error) {
+        dd.error(function(error) {
             /**
                 {
                 message:"错误信息",//message信息会展示出钉钉服务端生成签名使用的参数，请和您生成签名的参数作对比，找出错误的参数
@@ -161,7 +161,7 @@
                 }
             **/
             // alert('dd error: ' + JSON.stringify(err));
-            DingTalkPC.device.notification.alert({
+            dd.device.notification.alert({
                 message: JSON.stringify(error),
                 title: "提示", //可传空
                 buttonName: "收到",
