--- a/index.html
+++ b/index.html
@@ -96,33 +96,33 @@
                 // });
             }
 
-            // dd.biz.util.openSlidePanel({
-            //     url: 'about:blank', //打开侧边栏的url
-            //     title: 'title', //侧边栏顶部标题
-            //     onSuccess: function(result) {
-            //         /*
-            //             调用biz.navigation.quit接口进入onSuccess, result为调用biz.navigation.quit传入的数值
-            //         */
-            //         //设置返回按钮
-            //         dd.biz.navigation.setLeft({
-            //             show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
-            //             control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
-            //             showIcon: true, //是否显示icon，true 显示， false 不显示，默认true； 注：具体UI以客户端为准
-            //             text: '返回', //控制显示文本，空字符串表示显示默认文本
-            //             onSuccess: function(result) {
-            //                 //如果control为true，则onSuccess将在发生按钮点击事件被回调
-            //                 console.log('点击了返回按钮');
-            //                 window.history.back();
-            //             },
-            //             onFail: function(err) {}
-            //         });
-            //     },
-            //     onFail: function() {
-            //         /*
-            //             tips:点击右上角上角关闭按钮会进入onFail
-            //         */
-            //     }
-            // })
+            dd.biz.util.openSlidePanel({
+                url: 'about:blank', //打开侧边栏的url
+                title: 'title', //侧边栏顶部标题
+                onSuccess: function(result) {
+                    /*
+                        调用biz.navigation.quit接口进入onSuccess, result为调用biz.navigation.quit传入的数值
+                    */
+                    //设置返回按钮
+                    dd.biz.navigation.setLeft({
+                        show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
+                        control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
+                        showIcon: true, //是否显示icon，true 显示， false 不显示，默认true； 注：具体UI以客户端为准
+                        text: '返回', //控制显示文本，空字符串表示显示默认文本
+                        onSuccess: function(result) {
+                            //如果control为true，则onSuccess将在发生按钮点击事件被回调
+                            console.log('点击了返回按钮');
+                            window.history.back();
+                        },
+                        onFail: function(err) {}
+                    });
+                },
+                onFail: function() {
+                    /*
+                        tips:点击右上角上角关闭按钮会进入onFail
+                    */
+                }
+            })
 
 
 
