--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                 onSuccess: function(result) {
                     //如果control为true，则onSuccess将在发生按钮点击事件被回调
                     console.log('点击了返回按钮');
-                    window.history.back();
+                    // window.history.back();
+                    window.location.href = 'www.baidu.com'
                 },
                 onFail: function(err) {}
             });
