--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=htm, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>CCC</title>
 
     <!-- <script src="https://g.alicdn.com/dingding/dingtalk-pc-api/2.7.0/index.js"></script> -->
 
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <p>测试</p>
-    <button id="vv">获取用户信息</button>
+    <p>测试页面2</p>
+    <!-- <button id="vv">获取用户信息</button> -->
 </body>
 
 <script>
@@ -49,61 +49,6 @@
         console.log(dd)
 
         dd.ready(function() {
-            document.getElementById('vv').onclick = function() {
-                console.log(111)
-                dd.biz.user.get({
-                    onSuccess: function(info) {
-                        dd.device.notification.alert({
-                            message: JSON.stringify(info),
-                            title: "userGet success:", //可传空
-                            buttonName: "ok",
-                            onSuccess: function() {
-                                //onSuccess将在点击button之后回调
-                                /*回调*/
-                            },
-                            onFail: function(err) {}
-                        });
-                    },
-                    onFail: function(err) {
-                        dd.device.notification.alert({
-                            message: JSON.stringify(err),
-                            title: "userGet fail:", //可传空
-                            buttonName: "ok",
-                            onSuccess: function() {
-                                //onSuccess将在点击button之后回调
-                                /*回调*/
-                            },
-                            onFail: function(err) {}
-                        });
-                    }
-                });
-                // dd.biz.cspace.preview({
-                //     corpId: "dingb6a804608ad50c0d35c2f4657eb6378f",
-                //     fileName: "1分钟钉盘入门.pdf",
-                //     spaceId: "13557022",
-                //     fileId: "11452819",
-                //     fileSize: 1024,
-                //     fileType: "pdf",
-                //     onSuccess: function() {
-                //         //无，直接在弹窗页面显示文件详细信息
-                //     },
-                //     onFail: function(err) {
-                //         /*{
-                //             errorCode: 1001, //错误码
-                //             errorMessage: '', //错误信息
-                //         }*/
-                //     }
-                // });
-            }
-
-            // dd.biz.util.openSlidePanel({
-            //     url: 'about:blank', //打开侧边栏的url
-            //     title: 'title', //侧边栏顶部标题
-            //     onSuccess: function(result) {
-            //         /*
-            //             调用biz.navigation.quit接口进入onSuccess, result为调用biz.navigation.quit传入的数值
-            //         */
-            //设置返回按钮
             dd.biz.navigation.setLeft({
                 show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
                 control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
@@ -112,18 +57,10 @@
                 onSuccess: function(result) {
                     //如果control为true，则onSuccess将在发生按钮点击事件被回调
                     console.log('点击了返回按钮');
-                    // window.history.back();
-                    window.location.href = './index2.html'
+                    window.history.back();
                 },
                 onFail: function(err) {}
-            });
-            //     },
-            //     onFail: function() {
-            //         /*
-            //             tips:点击右上角上角关闭按钮会进入onFail
-            //         */
-            //     }
-            // })
+            })
 
 
 
