--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                 show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
                 control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
                 showIcon: true, //是否显示icon，true 显示， false 不显示，默认true； 注：具体UI以客户端为准
-                text: '返回吧', //控制显示文本，空字符串表示显示默认文本
+                text: '跳跳跳', //控制显示文本，空字符串表示显示默认文本
                 onSuccess: function(result) {
                     //如果control为true，则onSuccess将在发生按钮点击事件被回调
-                    console.log('点击了返回按钮');
+                    console.log('点击了跳跳跳');
                     // window.history.back();
                     window.location.href = './index2.html'
                 },
