--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 });
             }
 
-            document.getElementById('vv').onclick = function() {
+            document.getElementById('tb').onclick = function() {
                 dd.device.launcher.launchApp({
                     app: 'taobao', //iOS:应用scheme;Android:应用包名
                     activity: 'DetailActivity', //仅限Android，打开指定Activity，可不传。如果为空，就打开App的Main入口Activity
