--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             jsApiList: ['runtime.info', 'biz.contact.choose',
                     'device.notification.confirm', 'device.notification.alert',
                     'device.notification.prompt', 'biz.ding.post',
-                    'biz.util.openLink', 'biz.cspace.preview', 'biz.user.get', 'biz.navigation.setLeft', 'biz.util.openSlidePanel'
+                    'biz.util.openLink', 'biz.cspace.preview', 'biz.user.get', 'biz.navigation.setLeft', 'biz.util.openSlidePanel', 'device.launcher.launchApp'
                 ] // 必填，需要使用的jsapi列表，注意：不要带dd。
         });
         console.log(dd)
