--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <!-- <script src="https://g.alicdn.com/dingding/dingtalk-pc-api/2.7.0/index.js"></script> -->
+    <script src="https://g.alicdn.com/dingding/dingtalk-pc-api/2.7.0/index.js"></script>
 
-    <script src="https://g.alicdn.com/dingding/open-develop/1.6.9/dingtalk.js"></script>
+    <!-- <script src="https://g.alicdn.com/dingding/open-develop/1.6.9/dingtalk.js"></script> -->
     <!-- <script src="./index.js"></script> -->
 </head>
 
@@ -21,8 +21,8 @@
 
 <script>
     window.onload = function() {
-        console.log(dd)
-        dd.runtime.permission.requestAuthCode({
+        console.log(DingTalkPC)
+        DingTalkPC.runtime.permission.requestAuthCode({
             corpId: "dingb6a804608ad50c0d35c2f4657eb6378f", //企业ID
             onSuccess: function(result) {
                 /*{
@@ -34,7 +34,7 @@
 
         })
 
-        dd.config({
+        DingTalkPC.config({
             agentId: '116242846', // 必填，微应用ID
             corpId: 'dingb6a804608ad50c0d35c2f4657eb6378f', //必填，企业ID
             timeStamp: '1501486582', // 必填，生成签名的时间戳
@@ -45,16 +45,16 @@
                     'device.notification.confirm', 'device.notification.alert',
                     'device.notification.prompt', 'biz.ding.post',
                     'biz.util.openLink', 'biz.cspace.preview', 'biz.user.get', 'biz.navigation.setLeft', 'biz.util.openSlidePanel', 'device.launcher.launchApp'
-                ] // 必填，需要使用的jsapi列表，注意：不要带dd。
+                ] // 必填，需要使用的jsapi列表，注意：不要带DingTalkPC。
         });
-        console.log(dd)
+        console.log(DingTalkPC)
 
-        dd.ready(function() {
+        DingTalkPC.ready(function() {
             document.getElementById('vv').onclick = function() {
                 console.log(111)
-                dd.biz.user.get({
+                DingTalkPC.biz.user.get({
                     onSuccess: function(info) {
-                        dd.device.notification.alert({
+                        DingTalkPC.device.notification.alert({
                             message: JSON.stringify(info),
                             title: "userGet success:", //可传空
                             buttonName: "ok",
@@ -66,7 +66,7 @@
                         });
                     },
                     onFail: function(err) {
-                        dd.device.notification.alert({
+                        DingTalkPC.device.notification.alert({
                             message: JSON.stringify(err),
                             title: "userGet fail:", //可传空
                             buttonName: "ok",
@@ -81,7 +81,7 @@
             }
 
             document.getElementById('tb').onclick = function() {
-                dd.device.launcher.launchApp({
+                DingTalkPC.device.launcher.launchApp({
                     app: 'taobao', //iOS:应用scheme;Android:应用包名
                     // activity: 'DetailActivity', //仅限Android，打开指定Activity，可不传。如果为空，就打开App的Main入口Activity
                     onSuccess: function(data) {
@@ -96,7 +96,7 @@
             }
 
 
-            // dd.biz.util.openSlidePanel({
+            // DingTalkPC.biz.util.openSlidePanel({
             //     url: 'about:blank', //打开侧边栏的url
             //     title: 'title', //侧边栏顶部标题
             //     onSuccess: function(result) {
@@ -104,7 +104,7 @@
             //             调用biz.navigation.quit接口进入onSuccess, result为调用biz.navigation.quit传入的数值
             //         */
             //设置返回按钮
-            dd.biz.navigation.setLeft({
+            DingTalkPC.biz.navigation.setLeft({
                 show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
                 control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
                 showIcon: true, //是否显示icon，true 显示， false 不显示，默认true； 注：具体UI以客户端为准
@@ -127,7 +127,7 @@
 
 
 
-            dd.device.notification.prompt({
+            DingTalkPC.device.notification.prompt({
                 message: "写点什么？",
                 title: "提示",
                 buttonLabels: ['继续', '取消'],
@@ -139,7 +139,7 @@
                         value: '' //输入的值
                     }
                     */
-                    dd.device.notification.alert({
+                    DingTalkPC.device.notification.alert({
                         message: '你输入了' + result.value,
                         title: "提示", //可传空
                         buttonName: "ok",
@@ -154,15 +154,15 @@
             });
         })
 
-        dd.error(function(error) {
+        DingTalkPC.error(function(error) {
             /**
                 {
                 message:"错误信息",//message信息会展示出钉钉服务端生成签名使用的参数，请和您生成签名的参数作对比，找出错误的参数
                 errorCode:"错误码"
                 }
             **/
-            // alert('dd error: ' + JSON.stringify(err));
-            dd.device.notification.alert({
+            // alert('DingTalkPC error: ' + JSON.stringify(err));
+            DingTalkPC.device.notification.alert({
                 message: JSON.stringify(error),
                 title: "提示", //可传空
                 buttonName: "收到",
@@ -176,7 +176,7 @@
     }
 
 
-    // dd.ready(() => {
+    // DingTalkPC.ready(() => {
     //     console.log(234)
     // })
 </script>
