--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script>
     window.onload = function() {
         console.log(DingTalkPC)
+        console.log(DingTalkPC.ua)
         DingTalkPC.runtime.permission.requestAuthCode({
             corpId: "dingb6a804608ad50c0d35c2f4657eb6378f", //企业ID
             onSuccess: function(result) {
