--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         if (dd.ios || dd.android) {
             dt = dd
         } else {
-            dt = dt
+            dt = DingTalkPC
             console.log(dt.ua)
         }
         console.log(dt)
