--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
 <body>
     <p>测试</p>
     <button id="vv">获取用户信息</button>
-    <button id="tb">打开淘宝</button>
+    <button id="tb" style="display:none;">打开淘宝</button>
 </body>
 
 <script>
     window.onload = function() {
         let dt;
+        let type;
         if (dd.ios || dd.android) {
             dt = dd
+            type = 1
         } else {
             dt = DingTalkPC
+            type = 0
             console.log(dt.ua)
         }
         console.log(dt)
@@ -111,20 +114,24 @@
             //         /*
             //             调用biz.navigation.quit接口进入onSuccess, result为调用biz.navigation.quit传入的数值
             //         */
-            //设置返回按钮
-            dt.biz.navigation.setLeft({
-                show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
-                control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
-                showIcon: true, //是否显示icon，true 显示， false 不显示，默认true； 注：具体UI以客户端为准
-                text: '跳跳跳', //控制显示文本，空字符串表示显示默认文本
-                onSuccess: function(result) {
-                    //如果control为true，则onSuccess将在发生按钮点击事件被回调
-                    console.log('点击了跳跳跳');
-                    // window.history.back();
-                    window.location.href = './index2.html'
-                },
-                onFail: function(err) {}
-            });
+            if (type) {
+                document.getElementById('tb').style.display = 'inherit'
+                    //设置返回按钮
+                dt.biz.navigation.setLeft({
+                    show: true, //控制按钮显示， true 显示， false 隐藏， 默认true
+                    control: true, //是否控制点击事件，true 控制，false 不控制， 默认false
+                    showIcon: true, //是否显示icon，true 显示， false 不显示，默认true； 注：具体UI以客户端为准
+                    text: '跳跳跳', //控制显示文本，空字符串表示显示默认文本
+                    onSuccess: function(result) {
+                        //如果control为true，则onSuccess将在发生按钮点击事件被回调
+                        console.log('点击了跳跳跳');
+                        // window.history.back();
+                        window.location.href = './index2.html'
+                    },
+                    onFail: function(err) {}
+                });
+            }
+
             //     },
             //     onFail: function() {
             //         /*
