--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p>测试</p>
     <button id="vv">获取用户信息</button>
     <button id="tb" style="display:none;">打开淘宝</button>
+    <button id="xr">通讯录选人</button>
 </body>
 
 <script>
@@ -101,6 +102,28 @@
                             result: true //true 唤起成功 false 唤起失败
                         }
                         */
+                    },
+                    onFail: function(err) {}
+                });
+            }
+
+            document.getElementById('xr').onclick = function() {
+                DingTalkPC.biz.contact.choose({
+                    multiple: true, //是否多选： true多选 false单选； 默认true
+                    // users: ['10001', '10002', ...], //默认选中的用户列表，员工userid；成功回调中应包含该信息
+                    corpId: 'dingb6a804608ad50c0d35c2f4657eb6378f', //企业id
+                    max: 10, //人数限制，当multiple为true才生效，可选范围1-1500
+                    onSuccess: function(data) {
+                        console.log(data)
+                            /* data结构
+                            [{
+                                "name": "张三", //姓名
+                                "avatar": "http://g.alicdn.com/avatar/zhangsan.png" //头像图片url，可能为空
+                                "emplId": '0573', //员工userid
+                            },
+                            ...
+                            ]
+                            */
                     },
                     onFail: function(err) {}
                 });
