--- a/index.html
+++ b/index.html
@@ -131,13 +131,6 @@
             }
 
 
-            // dt.biz.util.openSlidePanel({
-            //     url: 'about:blank', //打开侧边栏的url
-            //     title: 'title', //侧边栏顶部标题
-            //     onSuccess: function(result) {
-            //         /*
-            //             调用biz.navigation.quit接口进入onSuccess, result为调用biz.navigation.quit传入的数值
-            //         */
             if (type) {
                 document.getElementById('tb').style.display = 'inherit'
                     //设置返回按钮
@@ -156,13 +149,22 @@
                 });
             }
 
-            //     },
-            //     onFail: function() {
-            //         /*
-            //             tips:点击右上角上角关闭按钮会进入onFail
-            //         */
-            //     }
-            // })
+            dt.biz.util.openSlidePanel({
+                url: './index2.html', //打开侧边栏的url
+                title: 'title', //侧边栏顶部标题
+                onSuccess: function(result) {
+                    /*
+                        调用biz.navigation.quit接口进入onSuccess, result为调用biz.navigation.quit传入的数值
+                    */
+
+
+                },
+                onFail: function() {
+                    /*
+                        tips:点击右上角上角关闭按钮会进入onFail
+                    */
+                }
+            })
 
 
 
